# bartardl

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
bartardl/: __init__.py  ardl.py  bart.py  colors.py  competitors.py  datasets.py  metrics.py  simulate.py  viz.py
bartardl/data/: us_macro.csv
docs/: guide.md  index.html  make_figures.py
docs/lecture/: README.md  ardl_bart_lecture.tex
examples/: 01_simulation_linear.py  02_simulation_nonlinear.py  03_macro_forecasting.py  quickstart.py
tests/: test_ardl.py  test_bart.py  test_metrics_viz.py
